feat: redesign iOS schedule experience
